gestion.c on continue !

--- a/IG1_D_VandendaelenClement/IG1_D_VandendaelenClement.vcxproj
+++ b/IG1_D_VandendaelenClement/IG1_D_VandendaelenClement.vcxproj
@@ -126,6 +126,7 @@
     <Object Include="Lexique.obj" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Gestion.c" />
     <ClCompile Include="Interface.c" />
     <ClCompile Include="Principale.c" />
   </ItemGroup>
