--- a/IG1_D_VandendaelenClement/IG1_D_VandendaelenClement.vcxproj.filters
+++ b/IG1_D_VandendaelenClement/IG1_D_VandendaelenClement.vcxproj.filters
@@ -42,5 +42,8 @@
     <ClCompile Include="Interface.c">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
+    <ClCompile Include="Gestion.c">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
