Dossier fini, step 1

--- a/IG1_D_VandendaelenClement/IG1_D_VandendaelenClement.vcxproj
+++ b/IG1_D_VandendaelenClement/IG1_D_VandendaelenClement.vcxproj
@@ -123,6 +123,7 @@
     <ClInclude Include="Lexique.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Fichiers.c" />
     <ClCompile Include="Gestion.c" />
     <ClCompile Include="Interface.c" />
     <ClCompile Include="Principale.c" />
