--- a/IG1_D_VandendaelenClement/IG1_D_VandendaelenClement.vcxproj.filters
+++ b/IG1_D_VandendaelenClement/IG1_D_VandendaelenClement.vcxproj.filters
@@ -40,6 +40,9 @@
     <ClCompile Include="Gestion.c">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
+    <ClCompile Include="Fichiers.c">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Object Include="Lexique.obj">
