--- a/IG1_D_VandendaelenClement/IG1_D_VandendaelenClement.vcxproj
+++ b/IG1_D_VandendaelenClement/IG1_D_VandendaelenClement.vcxproj
@@ -115,6 +115,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <Text Include="English.txt" />
     <Text Include="Francais.txt" />
   </ItemGroup>
   <ItemGroup>
