--- a/IG1_D_VandendaelenClement/IG1_D_VandendaelenClement.vcxproj.filters
+++ b/IG1_D_VandendaelenClement/IG1_D_VandendaelenClement.vcxproj.filters
@@ -18,6 +18,9 @@
     <Text Include="Francais.txt">
       <Filter>Fichiers de ressources</Filter>
     </Text>
+    <Text Include="English.txt">
+      <Filter>Fichiers de ressources</Filter>
+    </Text>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Constantes.h">
