--- a/IG1_D_VandendaelenClement/IG1_D_VandendaelenClement.vcxproj
+++ b/IG1_D_VandendaelenClement/IG1_D_VandendaelenClement.vcxproj
@@ -128,6 +128,7 @@
     <ClCompile Include="Gestion.c" />
     <ClCompile Include="Interface.c" />
     <ClCompile Include="Principale.c" />
+    <ClCompile Include="Test.c" />
   </ItemGroup>
   <ItemGroup>
     <Object Include="Lexique.obj" />
